# Yadro_test_task

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  Tape.cpp  Tape.h  TapeInterface.cpp  TapeInterface.h  TapeMergeSort.cpp  TapeMergeSort.h
